# server/docs/swagger.json
@@ -38,10 +38,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Message"
-                            }
+                            "$ref": "#/definitions/handler.okResponse"
                         }
                     },
                     "400": {
@@ -97,6 +94,14 @@
                     "type": "string"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.okResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 }
             }
